[gd_scene format=3 uid="uid://dmrvmic20ih2h"]

[ext_resource type="Script" uid="uid://c6r3f8w16fual" path="res://ui/main_menu.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_normal"]
content_margin_left = 20.0
content_margin_top = 8.0
content_margin_right = 20.0
content_margin_bottom = 8.0
bg_color = Color(0.12, 0.28, 0.1, 0.92)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.65, 0.25, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_pressed"]
content_margin_left = 20.0
content_margin_top = 8.0
content_margin_right = 20.0
content_margin_bottom = 8.0
bg_color = Color(0.08, 0.18, 0.06, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.25, 0.5, 0.2, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_btn_hover"]
content_margin_left = 20.0
content_margin_top = 8.0
content_margin_right = 20.0
content_margin_bottom = 8.0
bg_color = Color(0.18, 0.45, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.45, 0.85, 0.35, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MainMenu" type="Control" unique_id=769136539]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="." unique_id=1313304589]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.08, 0.03, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=323485176]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=751463995]
layout_mode = 2
theme_override_constants/separation = 14

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1710395965]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.78, 0.25, 1)
theme_override_font_sizes/font_size = 80
text = "MONKE"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1560610364]
layout_mode = 2
theme_override_colors/font_color = Color(0.55, 0.72, 0.45, 0.85)
theme_override_font_sizes/font_size = 18
text = "Swing.  Survive.  Eat."
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer" unique_id=1605596907]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=936998241]
custom_minimum_size = Vector2(300, 52)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.9, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.8, 0.65, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.9, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_hover")
text = "PLAY"

[node name="PlaygroundButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1016710854]
custom_minimum_size = Vector2(300, 52)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.9, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.8, 0.65, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.9, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_hover")
text = "PLAYGROUND"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=87338046]
custom_minimum_size = Vector2(300, 52)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.9, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.7, 0.8, 0.65, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0.9, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_hover")
text = "SETTINGS"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer" unique_id=1940075726]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1654546773]
custom_minimum_size = Vector2(300, 52)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.85, 0.55, 0.5, 1)
theme_override_colors/font_pressed_color = Color(0.6, 0.4, 0.35, 1)
theme_override_colors/font_hover_color = Color(1, 0.6, 0.55, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_btn_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_btn_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_btn_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_btn_hover")
text = "EXIT"

[node name="VersionLabel" type="Label" parent="." unique_id=262286235]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.4, 0.5, 0.35, 0.5)
theme_override_font_sizes/font_size = 13
text = "v0.1 alpha"
horizontal_alignment = 2
